refactor(basic-3.5, 3.6, 3.7): add indents between blocks, semicolons after CSS properties, CSS property values are separated by spaces after colons

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <section>
         <h3>Add Item</h3>
         <div class="todo__input">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+          <input id="new-task" class="todo__input_text" type="text">
+          <button id="button-add" class="button">Add</button>
         </div>
       </section>
       <section>
@@ -24,14 +24,14 @@
             <li>
               <input type="checkbox">
               <label for="todo-task">Pay Bills</label>
-              <input id="todo-task" class="task" type="text">
+              <input id="todo-task" class="todo__input_text" type="text">
               <button class="edit">Edit</button>
               <button class="delete"><img src="./remove.svg"></button>
             </li>
             <li class="editMode">
               <input type="checkbox">
               <label for="edit-task">Go Shopping</label>
-              <input id="edit-task" class="task" type="text">
+              <input id="edit-task" class="todo__input_text" type="text">
               <button class="edit">Save</button>
               <button class="delete"><img src="./remove.svg"></button>
             </li>
@@ -43,7 +43,7 @@
           <li>
             <input type="checkbox" checked>
             <label for="complit-task">See the Doctor</label>
-            <input id="complit-task" class="task" type="text">
+            <input id="complit-task" class="todo__input_text" type="text">
             <button class="edit">Edit</button>
             <button class="delete"><img src="./remove.svg"></button>
           </li>
