--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <ul id="incompleteTasks">
             <li>
               <input type="checkbox">
-              <label for="todo-task">Pay Bills</label>
+              <label for="todo-task" class="todo__input_label">Pay Bills</label>
               <input id="todo-task" class="todo__input_text" type="text">
               <button class="edit">Edit</button>
               <button class="delete"><img src="./remove.svg"></button>
             </li>
             <li class="editMode">
               <input type="checkbox">
-              <label for="edit-task">Go Shopping</label>
+              <label for="edit-task" class="todo__input_label">Go Shopping</label>
               <input id="edit-task" class="todo__input_text" type="text">
               <button class="edit">Save</button>
               <button class="delete"><img src="./remove.svg"></button>
@@ -42,7 +42,7 @@
         <ul id="completed-tasks">
           <li>
             <input type="checkbox" checked>
-            <label for="complit-task">See the Doctor</label>
+            <label for="complit-task" class="todo__input_label">See the Doctor</label>
             <input id="complit-task" class="todo__input_text" type="text">
             <button class="edit">Edit</button>
             <button class="delete"><img src="./remove.svg"></button>
