refactor(basic-3.7): add semicolons after css rule

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     </header>
     <main class="todo">
       <section>
-        <h3>Add Item</h3>
+        <h3 class="section__header">Add Item</h3>
         <div class="todo__input">
           <input id="new-task" class="todo__input_text" type="text">
           <button id="button-add" class="button">Add</button>
         </div>
       </section>
       <section>
-        <h3>Todo</h3>
+        <h3 class="section__header">Todo</h3>
         <ul id="incompleteTasks">
             <li>
               <input type="checkbox">
@@ -38,7 +38,7 @@
           </ul>
       </section>
       <section>
-        <h3>Completed</h3>
+        <h3 class="section__header">Completed</h3>
         <ul id="completed-tasks">
           <li>
             <input type="checkbox" checked>
