--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" class="header__img">
+      <img src="./eisenhower-matrix.jpg" class="header__img" alt="eisenhower matrix for todo">
       <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
     </header>
     <main class="todo">
@@ -26,14 +26,14 @@
               <label for="todo-task" class="todo__input_label">Pay Bills</label>
               <input id="todo-task" class="todo__input_text" type="text">
               <button class="edit">Edit</button>
-              <button class="delete"><img src="./remove.svg"></button>
+              <button class="delete"><img src="./remove.svg" alt="delete button"></button>
             </li>
             <li class="editMode">
               <input type="checkbox">
               <label for="edit-task" class="todo__input_label">Go Shopping</label>
               <input id="edit-task" class="todo__input_text" type="text">
               <button class="edit">Save</button>
-              <button class="delete"><img src="./remove.svg"></button>
+              <button class="delete"><img src="./remove.svg" alt="delete button"></button>
             </li>
           </ul>
       </section>
@@ -45,7 +45,7 @@
             <label for="complit-task" class="todo__input_label">See the Doctor</label>
             <input id="complit-task" class="todo__input_text" type="text">
             <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg"></button>
+            <button class="delete"><img src="./remove.svg" alt="delete button"></button>
           </li>
         </ul>
       </section>
