--- a/index.html
+++ b/index.html
@@ -14,41 +14,47 @@
       <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
     </header>
     <main class="todo">
-      <section>
+      <section class="section">
         <h3 class="section__header">Add Item</h3>
-        <div class="todo__input">
-          <input id="new-task" class="todo__input_text" type="text">
-          <button id="button-add" class="button">Add</button>
+        <div class="input__group">
+          <input type="text" id="new-task" class="input-group__input">
+          <button id="button-add" class="input-group__button">Add</button>
         </div>
       </section>
-      <section>
+      <section class="section">
         <h3 class="section__header">Todo</h3>
-        <ul id="incompleteTasks">
-            <li>
-              <input type="checkbox">
+        <ul id="incompleteTasks" class="list">
+            <li class="input__group">
+              <input type="checkbox" class="input__group_checkbox">
               <label for="todo-task" class="todo__input_label">Pay Bills</label>
               <input id="todo-task" class="todo__input_text" type="text">
-              <button class="edit">Edit</button>
-              <button class="delete"><img src="./remove.svg" alt="delete button"></button>
+              <button class="input-group__button input-group__button-edit">Edit</button>
+              <button class="input-group__button input-group__button-delete">
+                <img src="./remove.svg" alt="delete button" class="input-group__button-delete_img">
+              </button>
             </li>
             <li class="editMode">
-              <input type="checkbox">
+              <input type="checkbox" class="input__group_checkbox">
               <label for="edit-task" class="todo__input_label">Go Shopping</label>
               <input id="edit-task" class="todo__input_text" type="text">
-              <button class="edit">Save</button>
-              <button class="delete"><img src="./remove.svg" alt="delete button"></button>
+              <button class="input-group__button input-group__button-edit">Save</button>
+              <button class="input-group__button input-group__button-delete">
+                <img src="./remove.svg" alt="delete button" class="input-group__button-delete_img">
+              </button>
             </li>
           </ul>
       </section>
-      <section>
+      <section class="section">
         <h3 class="section__header">Completed</h3>
         <ul id="completed-tasks">
           <li>
-            <input type="checkbox" checked>
+            <input type="checkbox" checked class="input__group_checkbox">
             <label for="complit-task" class="todo__input_label">See the Doctor</label>
             <input id="complit-task" class="todo__input_text" type="text">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg" alt="delete button"></button>
+            <button class="input-group__button input-group__button-edit">Edit</button>
+            <button class="input-group__button input-group__button-delete">
+              <img src="./remove.svg" alt="delete button" class="input-group__button-delete_img">
+            </button>
           </li>
         </ul>
       </section>
