--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="todo">
       <section class="section">
         <h3 class="section__header">Add Item</h3>
-        <div class="input__group">
+        <div class="input-group">
           <input type="text" id="new-task" class="input-group__input">
           <button id="button-add" class="input-group__button">Add</button>
         </div>
@@ -24,19 +24,19 @@
       <section class="section">
         <h3 class="section__header">Todo</h3>
         <ul id="incompleteTasks" class="list">
-            <li class="input__group">
-              <input type="checkbox" class="input__group_checkbox">
-              <label for="todo-task" class="todo__input_label">Pay Bills</label>
-              <input id="todo-task" class="todo__input_text" type="text">
+            <li class="input-group">
+              <input type="checkbox" class="input-group__checkbox">
+              <label for="todo-task" class="input-group__label">Pay Bills</label>
+              <input id="todo-task" class="input-group__input input-group__input-list" type="text">
               <button class="input-group__button input-group__button-edit">Edit</button>
               <button class="input-group__button input-group__button-delete">
                 <img src="./remove.svg" alt="delete button" class="input-group__button-delete_img">
               </button>
             </li>
-            <li class="editMode">
-              <input type="checkbox" class="input__group_checkbox">
-              <label for="edit-task" class="todo__input_label">Go Shopping</label>
-              <input id="edit-task" class="todo__input_text" type="text">
+            <li class="input-group">
+              <input type="checkbox" class="input-group__checkbox">
+              <label for="edit-task" class="input-group__label input-group__label-edit">Go Shopping</label>
+              <input id="edit-task" class="input-group__input input-group__input-edit" type="text">
               <button class="input-group__button input-group__button-edit">Save</button>
               <button class="input-group__button input-group__button-delete">
                 <img src="./remove.svg" alt="delete button" class="input-group__button-delete_img">
@@ -46,11 +46,11 @@
       </section>
       <section class="section">
         <h3 class="section__header">Completed</h3>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked class="input__group_checkbox">
-            <label for="complit-task" class="todo__input_label">See the Doctor</label>
-            <input id="complit-task" class="todo__input_text" type="text">
+        <ul id="completed-tasks" class="list">
+          <li class="input-group">
+            <input type="checkbox" checked class="input-group__checkbox">
+            <label for="complit-task" class="input-group__label input-group__label-complited">See the Doctor</label>
+            <input id="complit-task" class="input-group__input input-group__input-list" type="text">
             <button class="input-group__button input-group__button-edit">Edit</button>
             <button class="input-group__button input-group__button-delete">
               <img src="./remove.svg" alt="delete button" class="input-group__button-delete_img">
