--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <img src="./remove.svg" alt="delete button" class="input-group__button-delete_img">
               </button>
             </li>
-            <li class="input-group">
+            <li class="input-group input-group-edit">
               <input type="checkbox" class="input-group__checkbox">
               <label for="edit-task" class="input-group__label input-group__label-edit">Go Shopping</label>
-              <input id="edit-task" class="input-group__input input-group__input-edit" type="text">
+              <input id="edit-task" class="input-group__input input-group__input-edit" type="text" placeholder="Go Shopping">
               <button class="input-group__button input-group__button-edit">Save</button>
               <button class="input-group__button input-group__button-delete">
                 <img src="./remove.svg" alt="delete button" class="input-group__button-delete_img">
