fix(extended 2.1): make changes to the js file according to the new element name

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </section>
       <section class="section">
         <h3 class="section__header">Todo</h3>
-        <ul id="incompleteTasks" class="list">
+        <ul id="incompleted-tasks" class="list">
             <li class="input-group">
               <input type="checkbox" class="input-group__checkbox">
               <label for="todo-task" class="input-group__label">Pay Bills</label>
@@ -47,7 +47,7 @@
       <section class="section">
         <h3 class="section__header">Completed</h3>
         <ul id="completed-tasks" class="list">
-          <li class="input-group">
+          <li class="input-group input-group-complit">
             <input type="checkbox" checked class="input-group__checkbox">
             <label for="complit-task" class="input-group__label input-group__label-complited">See the Doctor</label>
             <input id="complit-task" class="input-group__input input-group__input-list" type="text">
